# WebFrame2.0

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile.in
doxygen/: Doxyfile.in  footer.html  header.html
protocol/: CMakeLists.txt
protocol/inc/: generator.h  interface.h  platform.h
protocol/inc/handlers/http/interface/: client_handler.h
protocol/inc/http/: 1.0.hpp
protocol/inc/server/: interface.h
protocol/inc/server/http/: 1.0.hpp
protocol/src/http/: 1.0.cpp
protocol/src/server/: interface.cpp
protocol/src/server/http/: 1.0.cpp
src/boot_server/: CMakeLists.txt  iserver.h  platform.h  protocol_manager.h  server.cpp  server.h
src/boot_server/server_start/: linux.h  mac.h  windows.h
src/communication/: progressive.h  request.h  response.h  string_stream_buffer.cpp  string_stream_buffer.h
src/networking/: platform.h
src/networking/http2/: CMakeLists.txt  parser copy.cpp  parser.cpp  working.cpp
src/networking/multiple-listeners/: linux.h  macos.h  windows.h
src/protocol_handler/: CMakeLists.txt  protocol_handler.cpp  protocol_handler.h
src/protocol_handler/abstract/: protocol.h
src/protocol_handler/http/: 1.0.cpp  1.0.h  1.1.h  2.0.h
src/protocol_handler/http/common/: status_code.h
src/utils/: mmap_file.h  queue.h
sync_log/: CMakeLists.txt
sync_log/inc/: error.h  info.h  interface.h  loggers.h  warning.h
test/: CMakeLists.txt
test/http/: CMakeLists.txt  http1.0.cpp  http1.1.cpp
test/playground/: CMakeLists.txt  Dockerfile  main.cpp
