cmake_minimum_required(VERSION 3.20)

add_library(WebFrame_SyncLog_Interface INTERFACE inc/interface.h inc/platform.h)
target_compile_features(WebFrame_SyncLog_Interface INTERFACE cxx_std_23)
target_include_directories(WebFrame_SyncLog_Interface INTERFACE inc/)

add_library(WebFrame_SyncLog_Info STATIC inc/info.hpp src/info.cpp)
target_compile_features(WebFrame_SyncLog_Info PUBLIC cxx_std_23)
target_link_libraries(WebFrame_SyncLog_Info PUBLIC WebFrame_SyncLog_Interface)

add_library(WebFrame_SyncLog_Warning STATIC inc/warning.hpp src/info.cpp)
target_compile_features(WebFrame_SyncLog_Warning PUBLIC cxx_std_23)
target_link_libraries(WebFrame_SyncLog_Warning PUBLIC WebFrame_SyncLog_Interface)

add_library(WebFrame_SyncLog_Error STATIC inc/error.hpp src/info.cpp)
target_compile_features(WebFrame_SyncLog_Error PUBLIC cxx_std_23)
target_link_libraries(WebFrame_SyncLog_Error PUBLIC WebFrame_SyncLog_Interface)
