cmake_minimum_required(VERSION 3.20)

add_library(WebFrame_SyncLog_Interface INTERFACE inc/interface.h)
target_compile_features(WebFrame_SyncLog_Interface INTERFACE cxx_std_23)
target_include_directories(WebFrame_SyncLog_Interface INTERFACE inc/)

add_library(WebFrame_SyncLog_Info STATIC inc/info.h src/info.cpp)
target_compile_features(WebFrame_SyncLog_Info PUBLIC cxx_std_23)
target_link_libraries(WebFrame_SyncLog_Info PUBLIC WebFrame_SyncLog_Interface)

add_library(WebFrame_SyncLog_Warning STATIC inc/warning.h src/info.cpp)
target_compile_features(WebFrame_SyncLog_Warning PUBLIC cxx_std_23)
target_link_libraries(WebFrame_SyncLog_Warning PUBLIC WebFrame_SyncLog_Interface)

add_library(WebFrame_SyncLog_Error STATIC inc/error.h src/info.cpp)
target_compile_features(WebFrame_SyncLog_Error PUBLIC cxx_std_23)
target_link_libraries(WebFrame_SyncLog_Error PUBLIC WebFrame_SyncLog_Interface)

add_library(WebFrame_SyncLog INTERFACE)
target_link_libraries(WebFrame_SyncLog INTERFACE WebFrame_SyncLog_Info WebFrame_SyncLog_Warning WebFrame_SyncLog_Error)